--- a/blogpost.html
+++ b/blogpost.html
@@ -17,6 +17,7 @@
                 <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres.... por ahora.</p>
                 <p>Suscribete y dale like</p>
 		
+		<p>Manuel Pariona OFT</p>
                 <p>Edgar Barragán</p>
                 <p>@luiscarlos</p>
                 <p>Christopher Andrés Acevedo Galo</p>
@@ -136,7 +137,7 @@
                 <p>Vittorio Carlo</p>
                 <p>Andr&eacute;s Campero</p>
                 <p>Luis Miguel Rodriguez</p>
-                <p>Stefany Vega López</p>
+                <p>Stefany Vega López</p> 
             </div>
             <div id="footer">
               Hecho con amor en Platzi &lt;3
